--- a/src/assets/styles/scss/components/view/_info.scss
+++ b/src/assets/styles/scss/components/view/_info.scss
@@ -55,8 +55,8 @@
       align-self: center;
       outline: none;
       background-color: #F5FEFE;
-      border: 1px solid #4fb6b6;
-      color: #4fb6b6;
+      border: 1px solid #46a5a5;
+      color: #46a5a5;
 
 
       option {}
