--- a/src/assets/styles/scss/components/header/_navbar.scss
+++ b/src/assets/styles/scss/components/header/_navbar.scss
@@ -16,6 +16,7 @@
     z-index: 3;
 
     img {
+      transform: scale(1.2);
       cursor: pointer;
     }
 
@@ -82,11 +83,12 @@
     }
 
     &--user {
-      font-size: 1.5em;
+      font-size: 1.7em;
       width: auto;
       min-width: 50px;
       cursor: pointer;
       z-index: 2;
+      margin-right: -20px;
 
       @media screen and (max-width: 770px) {
         width: auto;
@@ -125,7 +127,7 @@
 
     &--cart {
       opacity: 1;
-      font-size: 1.5em;
+      font-size: 1.6em;
       width: 3%;
       min-width: 50px;
       transition: all .3s ease-in-out;
@@ -139,18 +141,18 @@
       }
 
       span.active {
-        background-color: #00b7b1d8;
+        background-color: #0b9994;
         border-radius: 50%;
-        font-size: .45em;
+        font-size: .55em;
         min-width: 18px;
         min-height: 12px;
         position: absolute;
-        top: 14px;
-        right: 175px;
+        top: 18px;
+        right: 180px;
         color: white;
         font-weight: 100;
         padding: 2px;
-        border: .1px solid #039e99;
+        border: .1px solid #04aaa5d8;
 
         @media screen and (max-width: 770px) {
           right: 82px;
