--- a/src/assets/styles/scss/index.scss
+++ b/src/assets/styles/scss/index.scss
@@ -6,6 +6,7 @@
 @use './components/cart/cart';
 @use './components/view/mainView';
 @use './components/footer/footer';
+@use './components/loader';
 
 @use './abstracts/variables';
 @use './abstracts/animations';
