--- a/src/assets/styles/scss/components/header/_dropdown.scss
+++ b/src/assets/styles/scss/components/header/_dropdown.scss
@@ -30,6 +30,11 @@
   @media screen and (max-width: 770px) {
     padding: 0;
     color: white;
+
+    svg {
+      filter: brightness(50);
+      width: 100%;
+    }
   }
 }
 
