--- a/src/assets/styles/scss/components/view/_details.scss
+++ b/src/assets/styles/scss/components/view/_details.scss
@@ -16,7 +16,7 @@
 
     &--description {
       font-weight: 500;
-      width: 7%;
+      width: 20%;
       padding-bottom: 2.2em;
       text-align: center;
       cursor: pointer;
@@ -26,12 +26,36 @@
 
       &.active {
         border-bottom: 3px solid gray;
+      }
+
+
+      @media screen and (max-width: 1300px) {
+        width: 20%;
+        font-size: .8em;
+      }
+
+      @media screen and (max-width: 950px) {
+        width: 30%;
+      }
+
+      @media screen and (max-width: 650px) {
+        width: 40%;
+      }
+
+      @media screen and (max-width: 480px) {
+        width: 50%;
+        font-size: .7em;
+      }
+
+      @media screen and (max-width: 340px) {
+        width: 30%;
+        font-size: .6em;
       }
     }
 
     &--features {
       font-weight: 500;
-      width: 12%;
+      width: 20%;
       padding-bottom: 2.2em;
       text-align: center;
       cursor: pointer;
@@ -42,7 +66,34 @@
         border-bottom: 3px solid gray;
 
       }
+
+      @media screen and (max-width: 1300px) {
+        width: 20%;
+        font-size: .8em;
+      }
+
+      @media screen and (max-width: 950px) {
+        width: 30%;
+      }
+
+      @media screen and (max-width: 650px) {
+        width: 40%;
+      }
+
+      @media screen and (max-width: 480px) {
+        width: 50%;
+        font-size: .7em;
+      }
+
+      @media screen and (max-width: 340px) {
+        width: 70%;
+        font-size: .6em;
+      }
     }
+
+    @media screen and (max-width: 1300px) {}
+
+    @media screen and (max-width: 550px) {}
   }
 
   &__info {
@@ -74,6 +125,11 @@
       &.active {
         display: block;
       }
+
+      @media screen and (max-width: 1300px) {
+        text-align: center;
+        width: 75%;
+      }
     }
 
     &--table {
@@ -83,7 +139,7 @@
 
       &-tab {
         margin: 0 auto;
-        width: 32%;
+        width: 45%;
         padding: 2em;
 
         tbody {
@@ -124,16 +180,51 @@
                   position: absolute;
                   right: calc(120%);
                   top: calc(50% - 1px);
+
+
+                  @media screen and (max-width: 1700px) {
+                    right: calc(110%);
+                  }
+
+                  @media screen and (max-width: 1300px) {
+                    right: calc(105%);
+                  }
                 }
+              }
+
+              @media screen and (max-width: 680px) {
+                width: 50%;
               }
             }
           }
+        }
+
+        @media screen and (max-width: 1700px) {
+          width: 75%;
+        }
+
+        @media screen and (max-width: 1300px) {
+          font-size: .9em;
+        }
+
+
+        @media screen and (max-width: 900px) {
+          width: 95%;
+          font-size: .8em;
         }
       }
 
       &.active {
         display: flex;
       }
+
+      @media screen and (max-width: 1300px) {}
     }
   }
+
+  @media screen and (max-width: 1300px) {
+    margin-top: 80px;
+  }
+
+  @media screen and (max-width: 550px) {}
 }
