--- a/src/assets/styles/scss/components/view/_images.scss
+++ b/src/assets/styles/scss/components/view/_images.scss
@@ -1,7 +1,7 @@
 @use '../../abstracts/variables' as var;
 
 .images {
-  min-width: 50%;
+  width: 50%;
 
   &__main {
     margin-bottom: 50px;
@@ -14,10 +14,25 @@
       transition: .5s;
       width: 100%;
       filter: contrast(1);
+      transform: scale(1.1);
 
       &.loaded {
         opacity: 1;
       }
+
+      @media screen and (max-width: 1575px) {
+        transform: scale(1.2);
+      }
+
+      @media screen and (max-width: 1300px) {
+        transform: scale(1);
+      }
+
+      @media screen and (max-width: 550px) {}
+    }
+
+    @media screen and (max-width: 1300px) {
+      margin-bottom: 0;
     }
   }
 
@@ -43,5 +58,14 @@
         }
       }
     }
+
+    @media screen and (max-width: 1300px) {
+      display: none;
+    }
+  }
+
+  @media screen and (max-width: 1300px) {
+    flex-flow: column wrap;
+    width: 100%;
   }
 }
