--- a/src/assets/styles/scss/components/view/_info.scss
+++ b/src/assets/styles/scss/components/view/_info.scss
@@ -2,11 +2,12 @@
 @use './cartHandler';
 
 .info {
-  width: 60%;
+  width: 50%;
   display: flex;
   flex-flow: column wrap;
   justify-content: center;
   align-items: center;
+  margin-left: 40px;
 
 
   &__main {
@@ -16,18 +17,46 @@
       font-weight: bolder;
       font-size: 3.4em;
       margin-bottom: 50px;
+
+      @media screen and (max-width: 1300px) {
+        font-size: 2.6em;
+        margin-bottom: 30px;
+      }
+
+      @media screen and (max-width: 550px) {
+        font-size: 2em;
+        margin-bottom: 20px;
+      }
     }
 
     &--short {
       font-size: 1.4em;
       font-style: italic;
       margin-bottom: 120px;
+
+      @media screen and (max-width: 1300px) {
+        margin-bottom: 20px;
+        font-size: 1.2em;
+      }
+
+      @media screen and (max-width: 550px) {
+        font-size: 1em;
+      }
     }
 
     &--price {
       font-size: 3em;
       color: var.$bianchi-color;
       margin-bottom: 40px;
+
+      @media screen and (max-width: 1300px) {
+        font-size: 2.6em;
+      }
+
+      @media screen and (max-width: 550px) {
+        font-size: 2em;
+        margin-bottom: 20px;
+      }
     }
   }
 
@@ -44,6 +73,11 @@
       font-weight: 500;
       font-size: 1.2em;
       margin-right: 20px;
+
+      @media screen and (max-width: 550px) {
+        margin: 0;
+        margin-bottom: 15px;
+      }
     }
 
     &--option {
@@ -58,8 +92,18 @@
       border: 1px solid #46a5a5;
       color: #46a5a5;
 
+      @media screen and (max-width: 380px) {
+        min-width: 180px;
+      }
+    }
 
-      option {}
+    @media screen and (max-width: 1300px) {
+      font-size: .8em;
+    }
+
+    @media screen and (max-width: 550px) {
+      font-size: .8em;
+      flex-flow: column wrap;
     }
   }
 
@@ -75,6 +119,10 @@
       font-weight: 500;
       font-size: 1.2em;
       margin-right: 20px;
+
+      @media screen and (max-width: 550px) {
+        margin: 0 10px;
+      }
     }
 
     &--colors {
@@ -93,6 +141,22 @@
         border: 3px solid rgb(0, 0, 0);
         padding: 2px;
       }
+
+      @media screen and (max-width: 1300px) {
+        margin: 0 5px;
+      }
+    }
+
+    @media screen and (max-width: 1300px) {
+      margin-top: 5px;
+      margin-bottom: 15px;
+      font-size: .8em;
+    }
+
+    @media screen and (max-width: 550px) {
+      margin-bottom: 10px;
+      font-size: .8em;
+      flex-flow: row nowrap;
     }
   }
 
@@ -105,6 +169,15 @@
 
     &.empty {
       opacity: 1;
+    }
+
+    @media screen and (max-width: 1300px) {
+      font-size: 1em;
+    }
+
+    @media screen and (max-width: 550px) {
+      font-size: .8em;
+      margin-bottom: 15px;
     }
   }
 
@@ -126,6 +199,11 @@
         opacity: 0.4;
         cursor: no-drop;
       }
+
+      @media screen and (max-width: 550px) {
+        margin: 20px 0;
+        min-width: 240px;
+      }
     }
 
     svg.fa-heart {
@@ -135,6 +213,29 @@
       opacity: .3;
       align-self: center;
       cursor: pointer;
+
+      @media screen and (max-width: 550px) {
+        width: 20%;
+        font-size: 3em;
+      }
+    }
+
+    @media screen and (max-width: 1800px) {
+      width: 100%;
+    }
+
+    @media screen and (max-width: 1300px) {
+      margin-bottom: 40px;
+      justify-content: center;
+      padding-bottom: 10px;
+      font-size: .9em;
+    }
+
+    @media screen and (max-width: 550px) {
+      margin-bottom: 20px;
+      flex-flow: column wrap;
+      align-items: center;
+      font-size: .7em;
     }
   }
 
@@ -145,11 +246,33 @@
       font-weight: 400;
       font-size: 1.4em;
       margin-right: 20px;
+
+      @media screen and (max-width: 1300px) {
+        margin-right: 0;
+      }
+
+      @media screen and (max-width: 550px) {
+        margin: 0;
+      }
     }
 
     &--icons {
 
       svg {}
     }
+
+    @media screen and (max-width: 1300px) {
+      padding-top: 0;
+      font-size: .9em;
+    }
+
+    @media screen and (max-width: 550px) {
+      font-size: .7em;
+    }
+  }
+
+  @media screen and (max-width: 1300px) {
+    width: 100%;
+    margin-left: 0;
   }
 }
