--- a/src/assets/styles/scss/components/cart/_cart.scss
+++ b/src/assets/styles/scss/components/cart/_cart.scss
@@ -9,7 +9,7 @@
   width: 100vw;
   min-height: 100vh;
   top: 0;
-  position: absolute;
+  position: fixed;
   visibility: hidden;
   z-index: 3;
   transition: all .4s ease-in-out;
