--- a/src/assets/styles/scss/components/header/_dropdown.scss
+++ b/src/assets/styles/scss/components/header/_dropdown.scss
@@ -20,12 +20,10 @@
   display: flex;
   align-items: center;
   font-size: 1.15em;
-  padding: 1rem 0.6rem;
+  margin: 1rem 0.6rem;
   cursor: pointer;
   width: 100%;
-  transition: all .4s ease-in-out;
-  margin-right: 30px;
-  
+  transition: all .4s ease-in-out;  
 
   @media screen and (max-width: 770px) {
     padding: 0;
