can't add 0 products

--- a/src/assets/styles/scss/components/view/_info.scss
+++ b/src/assets/styles/scss/components/view/_info.scss
@@ -198,6 +198,7 @@
       &.empty {
         opacity: 0.4;
         cursor: no-drop;
+        pointer-events: none;
       }
 
       @media screen and (max-width: 550px) {
