search front prepared

--- a/src/assets/styles/scss/index.scss
+++ b/src/assets/styles/scss/index.scss
@@ -6,6 +6,7 @@
 @use './components/footer/footer';
 @use './components/loader';
 @use './components//user/login';
+@use './components/search';
 
 @use './abstracts/variables';
 @use './abstracts/animations';
