--- a/src/assets/styles/scss/components/search/_search.scss
+++ b/src/assets/styles/scss/components/search/_search.scss
@@ -3,6 +3,7 @@
   width: 0;
   z-index: 5;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   position: absolute;
   right: 0;
@@ -30,6 +31,7 @@
     @media screen and (max-width: 770px) {
       width: 70%;
     }
+
     @media screen and (max-width: 500px) {
       width: 80%;
     }
@@ -78,10 +80,51 @@
         padding: 1em .4em;
         outline: none;
         border: none;
-        font-size: 1.8em;
-        font-style: italic;
+        font-size: 1.6em;
         color: rgba(44, 44, 44, 0.657);
 
+      }
+    }
+  }
+
+  &__results {
+    width: 100%;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    background-color: rgb(255, 255, 255);
+    list-style-type: none;
+    overflow: hidden;
+    transition: all 1s ease-in-out;
+
+    @media screen and (max-width: 1900px) {
+      width: 40%;
+    }
+
+    @media screen and (max-width: 1000px) {
+      width: 60%;
+    }
+
+    @media screen and (max-width: 770px) {
+      width: 70%;
+    }
+
+    @media screen and (max-width: 500px) {
+      width: 80%;
+    }
+
+    &--result {
+      min-width: 100%;
+      padding: 13px 10px 13px 20px;
+      font-size: 1.4em;
+      border-top: 1px solid #d8d5d5a4;
+      cursor: pointer;
+
+      &:first-child {
+        border: none;
+      }
+
+      &:hover {
+        background-color: rgba(128, 128, 128, 0.366);
       }
     }
   }
