create related styles

--- a/src/assets/styles/scss/index.scss
+++ b/src/assets/styles/scss/index.scss
@@ -1,6 +1,7 @@
 @use './components/header/navbar';
 @use './components/home/home';
 @use './components/category/category';
+@use './components/category/related';
 @use './components/cart/cart';
 @use './components/view/mainView';
 @use './components/footer/footer';
