--- a/src/assets/styles/scss/components/view/_info.scss
+++ b/src/assets/styles/scss/components/view/_info.scss
@@ -214,6 +214,13 @@
       opacity: .3;
       align-self: center;
       cursor: pointer;
+      transition: all .4s ease;
+
+      &.like {
+        color: red;
+        transform: scale(1.3);
+        opacity: 1;
+      }
 
       @media screen and (max-width: 550px) {
         width: 20%;
