--- a/src/assets/styles/scss/components/view/_info.scss
+++ b/src/assets/styles/scss/components/view/_info.scss
@@ -214,7 +214,7 @@
       opacity: .3;
       align-self: center;
       cursor: pointer;
-      transition: all .4s ease-in;
+      transition: all .3s cubic-bezier(0, 0, 0.2, 1);;
 
       &.like {
         color: red;
