--- a/src/assets/styles/scss/index.scss
+++ b/src/assets/styles/scss/index.scss
@@ -3,6 +3,7 @@
 @use './components/category/category';
 @use './components/category/related';
 @use './components/cart/cart';
+@use './components/cart/paymentPage';
 @use './components/view/mainView';
 @use './components/footer/footer';
 @use './components/loader';
