--- a/src/assets/styles/scss/components/user/_login.scss
+++ b/src/assets/styles/scss/components/user/_login.scss
@@ -7,17 +7,18 @@
   display: flex;
   flex-flow: column wrap;
   z-index: 5;
-  background-color: rgb(61, 58, 58);
-  color: white;
+  background-color: rgb(231, 231, 231);
+  color: black;
   padding: 1.5em 1.6em;
   justify-content: center;
   border-radius: 4px;
   opacity: 0;
   width: 0;
   transition: all .4s ease;
+  font-size: 1.2em;
 
   &.active {
-    width: 260px;
+    width: 350px;
     opacity: 1;
     right: 3%;
   }
@@ -64,7 +65,8 @@
     right: 5%;
     font-weight: lighter;
     font-size: 1.6em;
-    color: white;
+    color: black;
+    opacity: .5;
     transition: .5s all ease;
     cursor: pointer;
 
@@ -124,7 +126,7 @@
       color: red;
       text-align: center;
       margin: 0 auto;
-      width: 80%;
+      width: 90%;
       margin-bottom: 20px;
     }
   }
@@ -136,13 +138,34 @@
   }
 
   &__name {
-    margin: 10px 0;
+    width: 100%;
+    margin: 0 0 30px 0;
+    padding-bottom: 10px;
+    border-bottom: 1px solid rgba(175, 169, 169, 0.521);
+    font-weight: 400;
+    font-size: 1.6em;
+    margin-bottom: .7em;
   }
 
   &__link {
     width: fit-content;
-    margin: 10px 0;
+    margin: 10px 0 20px 0;
     cursor: pointer;
+
+    svg {
+      margin-right: 10px;
+    }
+
+    &--out {
+      border-top: 1px solid rgba(175, 169, 169, 0.521);
+      padding-top: 20px;
+      margin: 0;
+      cursor: pointer;
+
+      svg {
+        margin-right: 10px;
+      }
+    }
 
   }
 }
